# mbta-cli

./: LICENSE
mbta/: .mbtacache  Cargo.toml
mbta-api/: Cargo.toml  README.md
mbta-api/.openapi-generator/: FILES
mbta-api/docs/: ActivePeriod.md  Alert.md  AlertApi.md  AlertResource.md  AlertResourceAttributes.md  AlertResourceRelationships.md  AlertResourceRelationshipsFacility.md  AlertResourceRelationshipsFacilityData.md  AlertResourceRelationshipsFacilityLinks.md  Alerts.md  BadRequest.md  BadRequestErrorsInner.md  BadRequestErrorsInnerSource.md  Facilities.md  Facility.md  FacilityApi.md  FacilityProperty.md  FacilityResource.md  FacilityResourceAttributes.md  FacilityResourceRelationships.md  Forbidden.md  ForbiddenErrorsInner.md  InformedEntity.md  Line.md  LineApi.md  LineResource.md  LineResourceAttributes.md  Lines.md  LiveFacilities.md  LiveFacility.md  LiveFacilityApi.md  LiveFacilityResource.md  LiveFacilityResourceAttributes.md  NotAcceptable.md  NotAcceptableErrorsInner.md  NotFound.md  NotFoundErrorsInner.md  NotFoundErrorsInnerSource.md  OccupancyResource.md  OccupancyResourceAttributes.md  (+94 more)
mbta-api/src/apis/: alert_api.rs  configuration.rs  facility_api.rs  line_api.rs  live_facility_api.rs  mod.rs  prediction_api.rs  route_api.rs  route_pattern_api.rs  schedule_api.rs  service_api.rs  shape_api.rs  stop_api.rs  trip_api.rs  vehicle_api.rs
mbta-api/src/models/: active_period.rs  alert.rs  alert_resource.rs  alert_resource_attributes.rs  alert_resource_relationships.rs  alert_resource_relationships_facility.rs  alerts.rs  (+115 more)
mbta/src/: main.rs
(+9 files in other folders)
