[package]
name = "openapi"
version = "3.0"
authors = ["developer@mbta.com"]
description = "MBTA service API. https://www.mbta.com Source code: https://github.com/mbta/api"
license = "MassDOT Developer&#39;s License Agreement"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
