[package]
name = "mbta-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { versions = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
chrono = "0.4.31"

